# learning_with_ros_industrial

./: .gitignore  .gitmodules  README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/fake_ar_publisher/: ARMarker.h
devel/include/my_actions/: FibonacciAction.h  FibonacciActionFeedback.h  FibonacciActionGoal.h  FibonacciActionResult.h  FibonacciFeedback.h  FibonacciGoal.h  FibonacciResult.h
devel/include/myworkcell_core/: LocalizePart.h  LocalizePartRequest.h  LocalizePartResponse.h
devel/share/common-lisp/ros/my_actions/msg/: FibonacciAction.lisp  FibonacciActionFeedback.lisp  FibonacciActionGoal.lisp  FibonacciActionResult.lisp  FibonacciFeedback.lisp  FibonacciGoal.lisp  FibonacciResult.lisp  _package.lisp  _package_FibonacciAction.lisp  _package_FibonacciActionFeedback.lisp  _package_FibonacciActionGoal.lisp  _package_FibonacciActionResult.lisp  _package_FibonacciGoal.lisp  _package_FibonacciResult.lisp  my_actions-msg.asd
devel/share/common-lisp/ros/myworkcell_core/srv/: LocalizePart.lisp
devel/share/fake_ar_publisher/cmake/: fake_ar_publisher-msg-extras.cmake  fake_ar_publisher-msg-paths.cmake  fake_ar_publisherConfig.cmake
devel/share/gennodejs/ros/fake_ar_publisher/msg/: ARMarker.js
devel/share/gennodejs/ros/my_actions/msg/: FibonacciAction.js  FibonacciActionFeedback.js  FibonacciActionGoal.js  FibonacciActionResult.js  FibonacciFeedback.js  FibonacciGoal.js  FibonacciResult.js  _index.js
devel/share/gennodejs/ros/myworkcell_core/srv/: LocalizePart.js
devel/share/my_actions/cmake/: my_actions-msg-extras.cmake  my_actions-msg-paths.cmake  my_actionsConfig.cmake
devel/share/mypkg/cmake/: mypkgConfig.cmake
devel/share/myworkcell_core/cmake/: myworkcell_core-msg-extras.cmake  myworkcell_coreConfig.cmake
devel/share/myworkcell_support/cmake/: myworkcell_supportConfig.cmake
devel/share/myworkell_support/cmake/: myworkell_supportConfig.cmake
devel/share/roseus/ros/fake_ar_publisher/: manifest.l
devel/share/roseus/ros/my_actions/: manifest.l
devel/share/roseus/ros/my_actions/msg/: FibonacciAction.l  FibonacciActionFeedback.l  FibonacciActionGoal.l  FibonacciActionResult.l  FibonacciFeedback.l  FibonacciGoal.l  FibonacciResult.l
devel/share/roseus/ros/myworkcell_core/: manifest.l
devel/share/roseus/ros/myworkcell_core/srv/: LocalizePart.l
src/my_actions/: CMakeLists.txt  package.xml
src/my_actions/src/: fibonacci_client.cpp  fibonacci_server.cpp
src/my_mobile_robot/: CMakeLists.txt  package.xml
src/my_mobile_robot/config/: robot.rviz
src/my_mobile_robot/launch/: gazebo.launch  rviz.launch
src/my_mobile_robot/urdf/: rover.urdf.xacro
src/mypkg/: CMakeLists.txt  package.xml
src/mypkg/src/: hello.cpp  pubvel.cpp  subpose.cpp  turtle_tf2_listener.cpp
src/myworkcell_core/: CMakeLists.txt  package.xml
src/myworkcell_core/src/: myworkcell_node.cpp  vision_node.cpp
src/myworkcell_support/: CMakeLists.txt  package.xml
src/myworkcell_support/launch/: urdf.launch  workcell.launch
src/myworkcell_support/urdf/: workcell.urdf  workcell.xacro
